# zealphp-mongodb

./: .gitignore  CHANGELOG.md  Makefile  README.md  composer.json  phpcs.xml.dist  phpunit.xml.dist  psalm.xml.dist  rector.php
.claude/: CLAUDE.md
.github/workflows/: coding-standards.yml  static-analysis.yml  tests.yml
benchmarks/: compare.php
docs/: case-study-dual-runtime.md
ext/: Cargo.toml  build.rs
ext/src/: async_ops.rs  async_store.rs  bson_convert.rs  co_bridge.cpp  coroutine.rs  cursor.rs  lib.rs  ops.rs  pool.rs
php/: composer.json
php/src/: ArrayCursor.php  AsyncBridge.php  AsyncCursor.php  BulkWriteResult.php  ChangeStream.php  Client.php  Collection.php  Cursor.php  Database.php  DeleteResult.php  Document.php  IndexInfo.php  InsertManyResult.php  InsertOneResult.php  ReadConcern.php  ReadPreference.php  Session.php  UpdateResult.php  WriteConcern.php
php/src/BSON/: Binary.php  Decimal128.php  (+21 more)
stubs/: zealphp_mongodb.phpstub
tests/: parity_test.php  smoke_test.php  test_autoload.php  test_bson_types.php  test_client.php  test_collection_full.php  test_concerns.php  test_crud.php  test_database.php  test_exceptions.php  test_options.php
tests/Integration/: ClientTest.php  CollectionTest.php  DatabaseTest.php
tests/Unit/: ArrayCursorTest.php  ChangeStreamTest.php  CollectionBsonTransformTest.php  CollectionUnitTest.php  ConcernSerializationTest.php  ConcernTest.php  CursorTest.php  DatabaseUnitTest.php  IndexInfoTest.php  OperationConstantsTest.php  ResultClassesTest.php  SessionAdvancedTest.php  SessionTest.php  TopLevelDocumentTest.php
(+39 files in other folders)
