[package]
name = "zealphp-mongodb-ext"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "zealphp_mongodb"
crate-type = ["cdylib"]

[dependencies]
mongodb = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
ext-php-rs = "0.13"
bson = "2"
lazy_static = "1"
libc = "0.2"
futures = "0.3"
base64 = "0.22"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
